fixed some more bugs on iPhones

--- a/styles/index.css
+++ b/styles/index.css
@@ -157,7 +157,7 @@
 
     hr {
         border: 0px;
-        height: 7px;
+        height: 1vh;
         background-color: white;
     }
 
