--- a/styles/iphone.css
+++ b/styles/iphone.css
@@ -1,7 +1,7 @@
 body {
     background-image: url('../src/background-black.png');
     background-repeat: repeat;
-    background-size: auto 100vh;
+    background-size: auto 101vh;
 }
 
 h1 {
